--- a/package.json
+++ b/package.json
@@ -13,10 +13,12 @@
     "@react-three/fiber": "^9.0.0-alpha.8",
     "clsx": "^2.1.1",
     "framer-motion": "^12.23.9",
+    "gsap": "^3.13.0",
     "mini-svg-data-uri": "^1.4.4",
     "motion": "^12.23.3",
     "next": "15.3.5",
     "next-themes": "^0.4.6",
+    "ogl": "^1.0.11",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
